--- a/include/notebooks/test.ipynb
+++ b/include/notebooks/test.ipynb
@@ -255,19 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a2fcb326",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<duckdb.duckdb.DuckDBPyConnection at 0x110b18170>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'duckdb' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m conn = \u001b[43mduckdb\u001b[49m.connect()\n\u001b[32m      2\u001b[39m conn.execute(\u001b[33mf\u001b[39m\u001b[33m\"\"\"\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[33m            CREATE SECRET berka_phoenixnguyen (\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[33m                TYPE s3,\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m      9\u001b[39m \u001b[33m            );\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[33m        \u001b[39m\u001b[33m\"\"\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'duckdb' is not defined"
+     ]
     }
    ],
    "source": [
